Added some Anvil chances in Other Experience feature Added "Remove Too Expensive". As the name suggests, removes the 39 levels cap from the anvil Added "Remove rename cost". Renaming items is now always free